syntax = "proto3";

option go_package = "github.com/Vedrana5/XWS-BSEP-TIM31/dislinkt-backend/product-api/proto/helloworld";

package helloworld;
import  "google/api/annotations.proto";
 
import	"github.com/Vedrana5/XWS-BSEP-TIM31/dislinkt-backend/product-api/services/user-service/dto";
 

service Greeter {

   rpc Registration (RegistrationRequest) returns (EmptyResponse){
      option (google.api.http) = {
        delete: "/user"
      };
   }
}

message RegistrationRequest {
  repeated RegisteredUserDTO registeredUserDTO = 1;
}
message EmptyResponse{}
